--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,12 +98,29 @@ install(
   DESTINATION lib/${PROJECT_NAME}
 )
 
+# add_executable(g1_low_level apps/g1_low_level.cc ${SRCS})
+# target_include_directories(g1_low_level PUBLIC
+#   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+#   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
+# target_link_libraries(g1_low_level mujoco)
+# ament_target_dependencies(g1_low_level ${DEPENDENCY_LIST})
+# target_compile_options(g1_low_level PUBLIC "-Wall;-Wextra;-O3;")
+# target_compile_features(g1_low_level PUBLIC c_std_99 cxx_std_17)
+# install(
+#   TARGETS g1_low_level
+#   DESTINATION lib/${PROJECT_NAME}
+# )
+#
 ## Install Python Executables ##
 # Install Python modules
 ament_python_install_package(${PROJECT_NAME})
 # Install Python executables
 install(
   PROGRAMS python/move_example.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+install(
+  PROGRAMS python/go2_example.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
