--- a/package.xml
+++ b/package.xml
@@ -15,8 +15,13 @@
   <depend>unitree_hg</depend>
   <depend>unitree_go</depend>
   <depend>unitree_api</depend>
+  <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
   <depend>rosbag2_cpp</depend>
+
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
