torch -> DockerFile + changed joint mapping

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,6 +32,8 @@ RUN apt-get update && apt-get install -yy \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip install pyspacemouse
+# added for the rl_tasks
+RUN pip install torch 
 
 # MuJoCo
 RUN git clone https://github.com/deepmind/mujoco.git && \
