raw_imu BETTER policy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,10 @@ install(
   PROGRAMS apps/spacemouse_publisher.py
   DESTINATION lib/${PROJECT_NAME}
 )
+install(
+  PROGRAMS apps/rl_tasks/locomotion/go2/go2_publisher.py
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 ## Generate Custom Message Types ##
 rosidl_generate_interfaces(${PROJECT_NAME}
